# Chip-8

./: .gitignore  CMakeLists.txt  Emulator.cpp  Emulator.h  GameScreen.cpp  GameScreen.h  Makefile  README.md  log.txt  main.cpp
